# knowledge-assistant

./: .env.example  .gitignore  README.md
services/api_gateway/: pyproject.toml
services/api_gateway/src/api_gateway/: __init__.py  main.py
services/api_gateway/src/api_gateway/config/: __init__.py  settings.py
services/api_gateway/src/api_gateway/routes/: __init__.py  proxy.py
services/api_gateway/tests/: test_main.py
services/content_processor/: go.mod  go.sum
services/content_processor/cmd/: main.go
services/content_processor/internal/api/: handlers.go
services/content_processor/internal/clients/: llm_client.go  search_client.go
services/content_processor/internal/models/: content.go
services/content_processor/internal/processors/: pdf_processor.go
services/content_processor/internal/service/: content_service.go
services/github_mcp/: pyproject.toml
services/github_mcp/src/github_mcp/: __init__.py  config.py  http_server.py  main.py
services/llm_service/: pyproject.toml
services/llm_service/src/llm_service/: __init__.py  main.py
services/llm_service/src/llm_service/api/routes/: chat.py
services/llm_service/src/llm_service/clients/: __init__.py  mcp_client.py  ollama_client.py
services/llm_service/src/llm_service/core/: __init__.py  models.py  prompts.py  tool_prompts.py
services/llm_service/src/llm_service/core/services/: chat_service.py
services/llm_service/src/llm_service/infrastructure/: redis_cache.py
services/llm_service/tests/: test_main.py
services/search_service/: go.mod  go.sum
services/search_service/cmd/: main.go
(+9 files in other folders)
